--- a/app/src/main/res/layout/activity_second_main.xml
+++ b/app/src/main/res/layout/activity_second_main.xml
@@ -33,5 +33,12 @@
                 android:textAlignment="textEnd"
                 android:textSize="25dp"/>
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layoutComponent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"></LinearLayout>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
