--- a/app/src/main/res/layout/activity_second_main.xml
+++ b/app/src/main/res/layout/activity_second_main.xml
@@ -8,7 +8,6 @@
 
 
     <LinearLayout
-        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
@@ -33,12 +32,15 @@
                 android:textAlignment="textEnd"
                 android:textSize="25dp"/>
         </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/layoutComponent"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"></LinearLayout>
+            android:layout_height="match_parent">
 
+            <LinearLayout
+                android:id="@+id/layoutComponent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"></LinearLayout>
+        </ScrollView>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
